tests/baselines/reference/genericFunduleInModule2.errors.txt
genericFunduleInModule2.ts(11,8): error TS2749: 'A.B' refers to a value, but is being used as a type here. Did you mean 'typeof A.B'?


==== genericFunduleInModule2.ts (1 errors) ====
    namespace A {
        export function B<T>(x: T) { return x; }
    }
    
    namespace A {
        export namespace B {
            export var x = 1;
        }
    }
    
    var b: A.B;
           ~~~
!!! error TS2749: 'A.B' refers to a value, but is being used as a type here. Did you mean 'typeof A.B'?
    A.B(1);